<resources>
	<string name="app_name">DepremYA</string>
	<string name="str_hour">Saat: %s</string>
	<string name="str_depth">Derinlik: %s km</string>
	<string name="str_md">MD: %s</string>
	<string name="str_mw">MW: %s</string>
	<string name="str_city">Şehir:</string>
	<string name="str_region">Bölge: %s</string>
	<string name="str_resolution">Nitelik: %s</string>
	<string name="splash_title">DepremYA</string>
	<string name="license">Yunus Emre Ak ~ Asmaa Mirkhan \n The Appache License 2.0</string>
	<string name="str_show">Göster</string>
	<string name="str_cancel">İptal</string>
	<string name="filter">Sonuçları Filtrele</string>
	<string name="greater0">+0</string>
	<string name="greater4">+4</string>
	<string name="greater5">+5</string>
	<string name="greater6">+6</string>
	<string-array name="tr_cities">
		
		<item>Adana</item>
		<item>Adıyaman</item>
		<item>Afyonkarahisar</item>
		<item>Ağrı</item>
		<item>Aksaray</item>
		<item>Amasya</item>
		<item>Ankara</item>
		<item>Antalya</item>
		<item>Ardahan</item>
		<item>Artvin</item>
		<item>Aydın</item>
		<item>Balıkesir</item>
		<item>Bartın</item>
		<item>Batman</item>
		<item>Bayburt</item>
		<item>Bilecik</item>
		<item>Bingöl</item>
		<item>Bitlis</item>
		<item>Bolu</item>
		<item>Burdur</item>
		<item>Bursa</item>
		<item>Çanakkale</item>
		<item>Çankırı</item>
		<item>Çorum</item>
		<item>Denizli</item>
		<item>Diyarbakır</item>
		<item>Düzce</item>
		<item>Edirne</item>
		<item>Elazığ</item>
		<item>Erzincan</item>
		<item>Erzurum</item>
		<item>Eskişehir</item>
		<item>Gaziantep</item>
		<item>Giresun</item>
		<item>Gümüşhane</item>
		<item>Hakkâri</item>
		<item>Hatay</item>
		<item>Iğdır</item>
		<item>Isparta</item>
		<item>İstanbul</item>
		<item>İzmir</item>
		<item>Kahramanmaraş</item>
		<item>Karabük</item>
		<item>Karaman</item>
		<item>Kars</item>
		<item>Kastamonu</item>
		<item>Kayseri</item>
		<item>Kilis</item>
		<item>Kırıkkale</item>
		<item>Kırklareli</item>
		<item>Kırşehir</item>
		<item>Kocaeli</item>
		<item>Konya</item>
		<item>Kütahya</item>
		<item>Malatya</item>
		<item>Manisa</item>
		<item>Mardin</item>
		<item>Mersin</item>
		<item>Muğla</item>
		<item>Muş</item>
		<item>Nevşehir</item>
		<item>Niğde</item>
		<item>Ordu</item>
		<item>Osmaniye</item>
		<item>Rize</item>
		<item>Sakarya</item>
		<item>Samsun</item>
		<item>Şanlıurfa</item>
		<item>Siirt</item>
		<item>Sinop</item>
		<item>Sivas</item>
		<item>Şırnak</item>
		<item>Tekirdağ</item>
		<item>Tokat</item>
		<item>Trabzon</item>
		<item>Tunceli</item>
		<item>Uşak</item>
		<item>Van</item>
		<item>Yalova</item>
		<item>Yozgat</item>
		<item>Zonguldak</item>
	</string-array>
</resources>
